fix: pagenation overflow in mobile

--- a/themes/v-framework/assets/sass/theme.scss
+++ b/themes/v-framework/assets/sass/theme.scss
@@ -21,43 +21,50 @@
 }
 
 section {
-    padding-left : 1em;
+    padding-left: 1em;
     padding-right: 1em;
 }
 
 .main-strip .right-section {
     animation-duration: 1s;
-    animation-name    : slidein-rtl;
+    animation-name: slidein-rtl;
 }
 
 
 
 .main-strip .left-section {
     animation-duration: 1s;
-    animation-name    : slidein-ltr;
+    animation-name: slidein-ltr;
 }
 
 
 @keyframes slidein-rtl {
     from {
         transform: translateX(50px);
-        opacity  : 0;
+        opacity: 0;
     }
 
     to {
         transform: translateX(0);
-        opacity  : 1;
+        opacity: 1;
     }
 }
 
 @keyframes slidein-ltr {
     from {
         transform: translateX(-50px);
-        opacity  : 0;
+        opacity: 0;
     }
 
     to {
         transform: translateX(0);
-        opacity  : 1;
+        opacity: 1;
+    }
+}
+
+@media (max-width: 768px) {
+    .p-pagination {
+        flex-wrap: wrap;
+        justify-content: center;
     }
 }
